[workspace]
resolver = "2"
members = [
    "bignp256",
    "bp256",
    "bp384",
    "ed448-goldilocks",
    "hash2curve",
    "k256",
    "p192",
    "p224",
    "p256",
    "p384",
    "p521",
    "primefield",
    "primeorder",
    "sm2",
    "x448"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
ed448-goldilocks = { path = "ed448-goldilocks" }
hash2curve = { path = "hash2curve" }
primefield = { path = "primefield" }
primeorder = { path = "primeorder" }

#rustcrypto-group = { git = "https://github.com/RustCrypto/group", branch = "dense-wnaf" }
