[package]
name = "bign256"
version = "0.14.0-pre"
description = """
Pure Rust implementation of the Bign P-256 (a.k.a. bign-curve256v1)
elliptic curve as defined in STB 34.101.45-2013, with
general purpose curve arithmetic
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bign256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/bign256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "stb", "bign-curve256v1", "bignp256"]
edition = "2021"
rust-version = "1.73"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.0", features = ["sec1"] }

# optional dependencies
belt-hash = { version = "=0.2.0-pre.4", optional = true, default-features = false }
der = { version = "0.8.0-rc.0" }
digest = { version = "=0.11.0-pre.9", optional = true }
hex-literal = { version = "0.4", optional = true }
hkdf = { version = "=0.13.0-pre.4", optional = true }
hmac = { version = "=0.13.0-pre.4", optional = true }
rand_core = "0.6.4"
rfc6979 = { version = "=0.5.0-pre.4", optional = true }
pkcs8 = { version = "0.11.0-rc.1", optional = true }
primeorder = { version = "=0.14.0-pre.2", optional = true, path = "../primeorder" }
sec1 = { version = "0.8.0-rc.1", optional = true }
signature = { version = "=2.3.0-pre.4", optional = true }

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4"
primeorder = { version = "=0.14.0-pre.2", features = ["dev"], path = "../primeorder" }
proptest = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = { version = "0.4" }

[features]
default = ["arithmetic", "pkcs8", "std", "ecdsa", "pem", "ecdh"]
alloc = ["elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "elliptic-curve/std", "signature?/std"]

arithmetic = ["dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
ecdsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:belt-hash"]
pem = ["pkcs8", "sec1/pem"]
pkcs8 = ["dep:pkcs8"]
ecdh = ["arithmetic", "elliptic-curve/ecdh", "dep:digest", "dep:hkdf", "dep:hmac", "dep:belt-hash", "alloc"]
serde = ["elliptic-curve/serde", "primeorder?/serde"]
test-vectors = ["dep:hex-literal"]

[[bench]]
name = "field"
harness = false

[[bench]]
name = "scalar"
harness = false
