[package]
name = "bign256"
version = "0.13.1"
description = """
Pure Rust implementation of the Bign P-256 (a.k.a. bign-curve256v1)
elliptic curve as defined in STB 34.101.45-2013, with
general purpose curve arithmetic
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bign256"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/bign256"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "stb", "bign-curve256v1", "bignp256"]
edition = "2021"
rust-version = "1.65"

[dependencies]
elliptic-curve = { version = "0.13.8", features = ["hazmat", "sec1"] }

# optional dependencies
primeorder = { version = "0.13.5", optional = true, path = "../primeorder" }
signature = { version = "2", optional = true }
belt-hash = { version = "0.1.0", optional = true, default-features = false }
crypto-bigint = { version = "0.5.5", optional = true }
rfc6979 = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4"
proptest = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = {version = "0.4" }

[features]
default = ["arithmetic", "pkcs8", "std", "dsa"]
alloc = ["elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "elliptic-curve/std", "signature?/std"]
test-vectors = [] 

dsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:belt-hash", "dep:crypto-bigint"]
arithmetic = ["dep:primeorder", "elliptic-curve/arithmetic"]
pkcs8 = ["elliptic-curve/pkcs8"]

[[bench]]
name = "field"
harness = false

[[bench]]
name = "scalar"
harness = false
