[package]
name = "bignp256"
version = "0.14.0-rc.5"
description = """
Pure Rust implementation of the Bign P-256 (a.k.a. bign-curve256v1)
elliptic curve as defined in STB 34.101.45-2013, with
general purpose curve arithmetic
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bignp256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/bignp256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "stb", "bign-curve256v1", "bignp256"]
edition = "2024"
rust-version = "1.85"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.23", features = ["sec1"] }

# optional dependencies
belt-hash = { version = "0.2.0-rc.0", optional = true, default-features = false }
der = { version = "0.8.0-rc.10" }
digest = { version = "0.11.0-rc.7", optional = true }
hex-literal = { version = "1", optional = true }
hkdf = { version = "0.13.0-rc.3", optional = true }
hmac = { version = "0.13.0-rc.3", optional = true }
rand_core = "0.10.0-rc-5"
rfc6979 = { version = "0.5.0-rc.3", optional = true }
pkcs8 = { version = "0.11.0-rc.9", optional = true }
primefield = { version = "0.14.0-rc.5", optional = true }
primeorder = { version = "0.14.0-rc.5", optional = true }
sec1 = { version = "0.8.0-rc.13", optional = true }
signature = { version = "3.0.0-rc.8", optional = true }

[dev-dependencies]
criterion = "0.7"
elliptic-curve = { version = "0.14.0-rc.23", default-features = false, features = ["dev"] }
hex-literal = "1"
primeorder = { version = "0.14.0-rc.5", features = ["dev"] }
proptest = "1"

[features]
default = ["ecdh", "ecdsa", "pem", "std"]
alloc = ["elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "elliptic-curve/std", "getrandom"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
ecdsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:belt-hash"]
getrandom = ["elliptic-curve/getrandom"]
pem = ["pkcs8/pem", "sec1/pem"]
pkcs8 = ["dep:pkcs8"]
ecdh = ["arithmetic", "elliptic-curve/ecdh", "dep:digest", "dep:hkdf", "dep:hmac", "dep:belt-hash", "alloc"]
serde = ["elliptic-curve/serde", "primeorder?/serde"]
test-vectors = ["dep:hex-literal"]

[[bench]]
name = "field"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "point"
harness = false
required-features = ["arithmetic"]

[[bench]]
name = "scalar"
harness = false
required-features = ["arithmetic"]

[package.metadata.docs.rs]
all-features = true
