[package]
name = "bp256"
version = "0.14.0-pre.0"
description = "Brainpool P-256 (brainpoolP256r1 and brainpoolP256t1) elliptic curves"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bp256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/bp256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["brainpool", "crypto", "ecc"]
edition = "2024"
rust-version = "1.85"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.16", default-features = false, features = ["sec1"] }

# optional dependencies
ecdsa = { version = "0.17.0-rc.8", optional = true, default-features = false, features = ["der"] }
primefield = { version = "0.14.0-rc.0", optional = true }
primeorder = { version = "0.14.0-rc.0", optional = true }
sha2 = { version = "0.11.0-rc.2", optional = true, default-features = false }

[features]
default = ["pkcs8", "std"]
alloc = ["ecdsa?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa?/std", "elliptic-curve/std"]

arithmetic = ["dep:primefield", "dep:primeorder"]
bits = ["arithmetic", "elliptic-curve/bits"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa/serde", "elliptic-curve/serde"]
sha256 = ["ecdsa/digest", "ecdsa/hazmat", "sha2"]

[package.metadata.docs.rs]
all-features = true
