[package]
name = "bp384"
version = "0.7.0-pre"
description = "Brainpool P-384 (brainpoolP384r1 and brainpoolP384t1) elliptic curves"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/bp384"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/bp384"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["brainpool", "crypto", "ecc"]
edition = "2021"
rust-version = "1.73"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.0", default-features = false, features = ["sec1"] }

# optional dependencies
ecdsa = { version = "=0.17.0-pre.9", optional = true, default-features = false, features = ["der"] }
primeorder = { version = "=0.14.0-pre.2", optional = true, path = "../primeorder" }
sha2 = { version = "=0.11.0-pre.4", optional = true, default-features = false }

[features]
default = ["pkcs8", "std"]
alloc = ["ecdsa?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa?/std", "elliptic-curve/std"]

pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa/serde", "elliptic-curve/serde"]
sha384 = ["ecdsa/digest", "ecdsa/hazmat", "sha2"]
wip-arithmetic-do-not-use = ["dep:primeorder"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
