[package]
name = "ed448-goldilocks"
version = "0.14.0-pre.8"
authors = ["RustCrypto Developers"]
categories = ["cryptography"]
keywords = ["cryptography", "decaf", "ed448", "ed448-goldilocks"]
homepage = "https://docs.rs/ed448-goldilocks/"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/ed448-goldilocks"
documentation = "https://docs.rs/ed448-goldilocks"
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = """A pure-Rust implementation of Ed448 and Curve448 and Decaf.
This crate also includes signing and verifying of Ed448 signatures.
"""

[dependencies]
elliptic-curve = { version = "0.14.0-rc.24", features = ["arithmetic", "pkcs8"] }
hash2curve = "0.14.0-rc.8"
rand_core = { version = "0.10.0-rc-6", default-features = false }
sha3 = { version = "0.11.0-rc.4", default-features = false }
subtle = { version = "2.6", default-features = false }

# optional dependencies
ed448 = { version = "0.5.0-rc.2", optional = true, default-features = false }
serdect = { version = "0.4", optional = true }
signature = { version = "3.0.0-rc.9", optional = true, default-features = false, features = ["digest", "rand_core"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
getrandom = { version = "0.4.0-rc.1", features = ["sys_rng"] }
hex-literal = "1"
hex = "0.4"
proptest = { version = "1", features = ["attr-macro"] }
chacha20 = { version = "0.10.0-rc.9", features = ["rng"] }
serde_bare = "0.5"
serde_json = "1.0"

[features]
default = ["std", "signing", "pkcs8"]
alloc = ["ed448?/alloc", "elliptic-curve/alloc", "serdect?/alloc", "signature?/alloc"]
std = ["alloc", "getrandom"]

bits = ["elliptic-curve/bits"]
getrandom = ["elliptic-curve/getrandom"]
pkcs8 = ["ed448?/pkcs8", "elliptic-curve/pkcs8"]
signing = ["dep:ed448", "dep:signature"]
serde = ["dep:serdect", "ed448?/serde_bytes"]

[[bench]]
harness = false
name = "bench"

[package.metadata.docs.rs]
all-features = true
