[package]
name = "elliptic-curve"
description = """
General purpose Elliptic Curve Cryptography (ECC) support, including types
and traits for representing various elliptic curve forms, scalars, points,
and public/secret keys composed thereof.
"""
version       = "0.4.0" # Also update html_root_url in lib.rs when bumping this
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/elliptic-curve"
repository    = "https://github.com/RustCrypto/elliptic-curves/tree/master/elliptic-curve-crate"
readme        = "README.md"
edition       = "2018"
categories    = ["cryptography", "no-std"]
keywords      = ["crypto", "ecc", "elliptic", "weierstrass"]

[dependencies.generic-array]
version = "0.14"
default-features = false

[dependencies.rand_core]
version = "0.5"
optional = true
default-features = false

[dependencies.subtle]
version = "2.2.2"
default-features = false

[dependencies.zeroize]
version = "1"
optional = true
default-features = false

[dev-dependencies]
hex = "0.4"

[features]
default = []
weierstrass = []
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
